<resources>
    <string name="app_name">schet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">score:</string>
    <string name="menu">Menu</string>
    <string name="answer">answer</string>
    <string name="chek">chek</string>
    <string name="text">text</string>
    <string name="start">start</string>
    <string name="score_0">score:0</string>
    <string name="summation">summation</string>
    <string name="subtraction">subtraction</string>
    <string name="multiplication">multiplication</string>
    <string name="division">division</string>
    <string name="True">true</string>
    <string name="False">False</string>
    <string name="play">play</string>
    <string name="win">!!!Win!!!</string>
    <string name="lose">Lose :(</string>
    <string name="time_spent">"Time spent: "</string>
    <string name="miss_made">"Misstakes made: "</string>
    <string name="_1_to_9">1 to 9</string>
    <string name="Answ">Your answer is wrong</string>
    <string name="Anst">Your answer is correct</string>
    <string name="about_the_project">about the project</string>
    <string name="info">info</string>
    <string name="sequence">sequence</string>
    <string name="Trueanswer">True answer:</string>
    <string name="hard_mode">hard mode</string>
</resources>