<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            />
        <TextView
            android:id="@+id/score"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            />
    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="40dp"
            android:gravity="center">
            <Button
                android:id="@+id/summation"
                android:text="@string/summation"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/subtraction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtraction"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/multiplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiplication"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/division"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:textSize="30sp"/>


        </LinearLayout>





    </ScrollView>


</LinearLayout>